refactor: extract expense division logic into dedicated methods and update system date handling in GastoService